--- a/JupyterLab1.ipynb
+++ b/JupyterLab1.ipynb
@@ -30,8 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3a87971e-d4e9-4617-8c25-93aa8f6357a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce37170d-f8c1-4c54-8a55-c6b898d99e7e",
    "metadata": {},
    "outputs": [],
    "source": []
